--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "builds": [{ "src": "main.py", "use": "@now/python" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "version": 1,
+  "builds": [{ "src": "main.py", "use": "@vercel/python" }],
+  "routes": [{ "src": "/(.*)", "dest": "main.py" }]
 }
